[metadata]
name = sort-cpp-includes
version = 0.0.1
author = Vasily Kulikov
author_email = segooon@gmail.com
description = Sorter of C/C++ includes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/segoon/sort-cpp-includes
project_urls = 
    Bug Tracker = https://github.com/segoon/sort-cpp-includes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
